[package]
name = "prospect"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Hyperparameter optimization and search space exploration"
repository = "https://github.com/arclabs561/prospect"
keywords = ["hyperparameter", "optimization", "search-space", "tuning", "ablation"]
categories = ["algorithms", "science"]
rust-version = "1.75"

[workspace]
